--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <header class="header">
 
         <!-- NAVBAR TO NAVIGATE THE SECTIONS OF THE PAGE -->
-        <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-secondary shadow">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-secondary shadow">
             <div class="container">
                 <a class="navbar-brand" href="#">Hospital</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -335,6 +335,7 @@
 
     <!-- TESTIMONIAL -->
     <section class="section testimonials bg-white">
+        <h2 class="heading display-2">Clientes satisfechos</h2>
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
                 <!-- Testimonial 1 -->
@@ -412,7 +413,7 @@
     </section>
 
     <!-- HOURS -->
-    <section class="section hours my-5">
+    <section class="section hours mt-5">
         <div class="overlay">
             <div class="content">
                 <h2 class="heading mt-0 display-3">Emergencias 24/7</h2>
@@ -423,7 +424,7 @@
 
 
     <!-- FQA -->
-    <section class="section fqa">
+    <section class="section fqa bg-grey">
         <div class="container-lg">
             <h2 class="heading display-3">FQA</h2>
 
@@ -518,6 +519,45 @@
 
 
     <!-- CONTACT -->
+    <div class="py-5 contact mt-5 bg-grey">
+        <div class="container">
+            <div class="contact-grid">
+                <div class="contact-info p-4">
+                    <h2 class="heading m-0 ">Información de Contacto</h2>
+                    <hr class="text-red">
+                    <p><strong>Dirección:</strong> Calle Ejemplo 123, Ciudad, País</p>
+                    <p><strong>Teléfono:</strong> +1 (234) 567-890</p>
+                    <p><strong>Email:</strong> contacto@hospital.com</p>
+                    <div class="map">
+                        <!-- Aquí puedes agregar el iframe de Google Maps -->
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.835434509862!2d144.95373531531896!3d-37.81720997975173!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f0f3dcb%3A0x5045675218ceed0!2sYour+Location!5e0!3m2!1sen!2sus!4v1551169532821!5m2!1sen!2sus"
+                            width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    </div>
+                </div>
+                <div class="contact-form p-4 shadow bg-white">
+                    <h2 class="heading m-0 ">Contáctanos</h2>
+                    <hr class="text-red">
+                    <form>
+                        <div class="form-group">
+                            <label for="name">Nombre:</label>
+                            <input type="text" id="name" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Correo Electrónico:</label>
+                            <input type="email" id="email" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="message">Mensaje:</label>
+                            <textarea id="message" rows="4" required></textarea>
+                        </div>
+                        <button type="submit">Enviar</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 
     <!-- BLOG -->
